# blades

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .vscode-upload.json  LICENSE  LICENSE.md  README.md  README.rst  configure.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: branch-name-check.yaml  deploy_test.yaml  lint.yml  testing.yml  unit-tests.yml
blades/: train.py  uppmax_run.sh
blades/adversaries/: __init__.py  adaptive_adversary.py  adversary.py  alie_adversary.py  attackclippedclustering_adversary.py  ipm_adversary.py  labelflip_adversary.py  minmax_adversary.py  noise_adversary.py  signflip_adversary.py  signguard_adversary.py
blades/aggregators/: __init__.py  aggregators.py  clippedclustering.py  signguard.py
blades/algorithms/: registry.py
blades/benchmarks/: main.py
blades/clients/: callbacks.py  client.py  dp_client.py
blades/tuned_examples/: fedavg_60_mnist.yaml  fedavg_cifar10_resnet_noniid.yaml  fedavg_cnn_mnist.yaml  fedavg_dp.yaml  fedavg_fashion_cnn_noniid.yaml  fedavg_fashion_mnist.yaml  fedavg_resnet_cifar10.yaml  fedavg_test1.yaml  fedavg_toy_mnist.yaml  fedavg_ucihar.yaml  fedsgd_cifar10.yaml  fedsgd_cnn_fashion_mnist.yaml  fedsgd_ucihar.yaml  local20_cnn_FashionMNIST.yaml  local20_cnn_feshion_mnist.yaml  local20_resnet_cifar10.yaml  local20_resnet_clippedclustering.yaml  toy_fedsgd.yaml
byzantinefl/: args.py  main.py
byzantinefl/aggregators/: geomed.py  mean.py  safeguard.py
byzantinefl/attackers/: alieclient.py  bitflippingclient.py  ipmclient.py  labelflippingclient.py  noiseclient.py
byzantinefl/settings/: cifar10.py  mnist.py  resnet_gn.py  vgg.py
byzantinefl/simulator/: actor.py  client.py  clientbuilder.py  datasets.py  server.py  simulator.py
byzantinefl/simulators/: clientbuilder.py  server.py
config/: example.yaml  example_cpu.yaml  median_alie.yaml
data/utils/: language_utils.py  sample.py  split_data.py  stats.py
docs/: make.sh  requirements.txt
docs/source/: README.md  attacks.md  conf.py  defenses.md  index.md  index.rst  index_backup.rst  index_bk.md  install.md  install.rst  sg_execution_times.rst
example/: Matplotlib_Animation.ipynb  algorithms.py  main.ipynb  v2.ipynb
examples/: README.rst  customize_attack.py  fedavg_tune.py  plot_comparing_aggregation_schemes.py
experiments/weak_scalability/: main.py
fllib/: constants.py  session.py  types.py
fllib/_internal/: worker_group.py
fllib/aggregators/: __init__.py  aggregators.py  centeredclipping.py  clippedclustering.py  multikrum.py  signguard.py
fllib/algorithms/: __init__.py  algorithm.py  algorithm_config.py  callbacks.py  client_manager.py  server.py  server_config.py
fllib/blades/: train.py  uppmax_run.sh
fllib/clients/: __init__.py  callbacks.py  client.py  client_config.py
fllib/communication/: __init__.py  communicator.py  communicator_set.py
fllib/datasets/: __init__.py  catalog.py  cifar10.py  clientdataset.py  dataset.py  fashionmnist.py  fldataset.py  mnist.py  noniid_visualization.ipynb  ucihar.py
fllib/models/: catalog.py
fllib/tasks/: __init__.py  general_classfication.py  general_classification.py  image_classfication.py  mnist.py  task.py
fllib/tests/: test_actor_pool.py  test_client_session.py  test_communication.py  test_communication_set.py  test_worker_group.py
fllib/utils/: __init__.py  actor_pool.py  queue.py  torch_utils.py
landscape/: 2d_plot_cct.sh  dataloader.py  h52vtp.py  main.ipynb  net_plotter.py  plot_2D.py  plot_surface.py  plot_trajectory.py  projection.py
landscape/cifar10/: model_loader.py
models/: actormanager.py  fedbase.py  fedmodel.py
models/bosch/: mlp.py
models/fashion/: cnn.py
models/femnist/: cnn.py
notebooks/: Untitled.ipynb  cluster.ipynb  contours.ipynb  make_plots.ipynb  plot_adaptive.ipynb  plot_batch_szie.ipynb  plot_momentum.ipynb  v1.ipynb  visualization.ipynb  visualization1.ipynb
others/example/: Optimizers_in_Action.ipynb  algorithms.py  animation.ipynb  contour_plot.py  main.ipynb
others/landscape/: 2d_contour_cct.sh  dataloader.py  evaluation.py  h52vtp.py  h5_util.py  hess_vec_prod.py  model_loader.py  mpi4pytorch.py  net_plotter.py  plot_1D.py  plot_2D.py  plot_hessian_eigen.py  plot_surface.py  plot_trajectory.py  projection.py  scheduler.py
scripts/: args.py  build.sh  centralized_mnist.py  cifar10.py  cifar10.sh  cifar10_fedsgd.py  cifar10_fedsgd.sh  dp_cpu.py  main.py  main_cpu.py  mnist.py  mnist.sh  release.sh  run.sh  run2.sh  run_adaptive.sh  run_batch_szie.sh  run_dp.sh  run_serv_momentum.sh  run_with_dp.sh  runner.py  simulator.py  update_doc.sh
scripts/wandb/: latest-run
src/: README.md  args.py  main.py  sampler.py  saved_final_model.pt  saved_init_model.pt  setup.py  test_ray.py
src/aggregators/: autogm.py  byzantinesgd.py  clippedclustering.py  clipping.py  clustering.py  geomed.py  krum.py  median.py  safeguard.py  trimmedmean.py
src/attackers/: alieclient.py  bitflippingclient.py  ipmclient.py  labelflippingclient.py  noiseclient.py
src/blades/: README.md  __init__.py  actor.py  builder.py  client.py  main.py  server.py  simulator.py  utils.py
src/byzantinefl/: README.md  args.py  main.py  mnist_example.py
src/codes/: args.py  cifar10-all.py  sampler.py
src/notebooks/: cluster.ipynb  contours.ipynb  explore.ipynb  updates_fedavg_noniid.npy  updates_fedsgd_ipm.npy  v1.ipynb
src/scripts/: cifar10-all.py  cifar10.sh  kill_cifar.sh
src/settings/: cifar10.py  data_utils.py  resnet.py
src/simulators/: actor.py  client.py  clientbuilder.py  datamanager.py  simulator.py  simulator_ray.py  simulator_trainer.py  worker.py
src/tasks/: cifar10.py
src/tests/: test_aggregators.py  test_utils.py
src_ray/: test_ray.py
src_ray/codes/: args.py  cifar10-all.py
src_ray/scripts/: cifar10-all.py
tasks/cifar10/: cct.py
trainers/codes/: sampler.py  utils.py
trainers/momentum-robustness/: cifar10-CC-HP-explore.ipynb  cifar10-CC-HP-explore.py  cifar10-CC-HP-explore.sh  cifar10-all.py  cifar10-all.sh
trainers/notebooks/: updates_fedavg_iid.npy  updates_fedsgd_iid.npy  v1.ipynb  (+4 more)
(+354 files in other folders)
